    - Upgraded CMake minimum version support to 3.12.
    - Removed OPENVDB_STATIC_SPECIALIZATION macro which is no longer required.
    - Fixed various compiler warnings for GCC 9.1.
    - Moved to CMake doxygen commands and removed the doxygen-config files for
      doxygen documentation.
    - Added USE_ZLIB compiler flag that enables zlib compression and defaults
      to on.

Version 7.1.0 - August 13, 2020

      As of this release, support for grid ABI=4 has been removed.

    New features:
    - Added a novel parallel sparse FastSweeping class that outperforms our
      existing techniques for computing signed distance fields in addition to
      supporting velocity extension.
    - Added tools::fogToSdf which converts a scalar (fog) volume into a signed
      distance field.
    - Added tools::sdfToSdf which re-normalizes a signed distance field;
    - Added tools::fogToExt which extends an arbitrary field (e.g. velocity)
      off the iso-surface of a scalar (fog) volume.
    - Added tools::sdfToExt which extends an arbitrary field (e.g. velocity)
      off the iso-surface of a signed distance field.
    - Added tools::fogToSdfAndExt which computes a signed distance and extends
      an arbitrary field (e.g. velocity) off the iso-surface of a signed
      distance field.
    - Added tools::fogToSdfAndExt which re-normalizes a signed distance and
      extends an arbitrary field (e.g. velocity) off the iso-surface of a
      signed distance field.
    - Added tools::dilateSdf which dilates a signed distance field.
    - Added tools::maskSdf which extends an existing signed distance into a
      user-defined mask.
    - Added Grid::isTreeUnique() to tell if the tree is shared with another
      grid.
    - Added PointDataLeafNode::stealAttributeSet() and
      AttributeSet::removeAttribute() for releasing ownership of attribute
      data.
    - Added AttributeSet::Descriptor::groupIndexCollision() for detecting