@@ -491,7 +491,11 @@ if(WIN32)
   list(APPEND OpenVDB_DEFINITIONS NOMINMAX)
 endif()
 
-if(NOT OPENVDB_USE_STATIC_LIBS)
+if(OPENVDB_USE_STATIC_LIBS)
+  if(WIN32)
+    list(APPEND OpenVDB_DEFINITIONS OPENVDB_STATICLIB)
+  endif()
+else()
   if(WIN32)
     list(APPEND OpenVDB_DEFINITIONS OPENVDB_DLL)
   endif()
