@@ -438,7 +438,7 @@ if(OPENVDB_CORE_STATIC)
   )
 
   target_compile_definitions(openvdb_static
-    PUBLIC ${OPENVDB_CORE_PUBLIC_DEFINES}
+    PUBLIC ${OPENVDB_CORE_PUBLIC_DEFINES} -DOPENVDB_STATICLIB
     PRIVATE ${OPENVDB_CORE_PRIVATE_DEFINES}
   )
 
