@@ -32,6 +32,9 @@ Build:
   doxygen documentation.
 - Added USE_ZLIB compiler flag that enables zlib compression and defaults
   to on.
+- Added the OPENVDB_STATICLIB define to all static builds to fix builds on
+  Windows which use the multithread/DLL-specific version of the CRT.
+  <I>[Reported&nbsp;by&nbsp;Tobias&nbsp;Rittig]</I>
 
 
 @htmlonly <a name="v7_1_0_changes"></a>@endhtmlonly
